samples/_failures_safe/1761077321_be0815_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_54c0fc79.c: In function ‘main’:
./samples/SAFE/__tmp_54c0fc79.c:182:5: error: expected declaration or statement at end of input
  182 |     }
      |     ^
